--- a/app/index.html
+++ b/app/index.html
@@ -4,20 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Clinic</title>
-	
  <!-- Bootstrap -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<!--Fonts Googlle-->  
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
- 
-  <!--Font Awesome 
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> -->
-
-	
-
 	<!-- Custom styles for this template -->
 	<link rel="stylesheet" href="css/main.css">
-	
 </head>
 
 <body>
@@ -119,7 +111,7 @@
         </ul>
  						</li>
  						<li><a href="#">Наши врачи</a></li>
- 						<li><a href="#">Пациентам</a></li>
+ 						<li class="patient"><a href="#">Пациентам</a></li>
  						<li><a href="#">Донорам</a></li>
  						<li><a href="#">Вопрос-ответ</a></li>
  						<li><a href="#">Отзывы</a></li>
@@ -145,40 +137,40 @@
  		<div class="container">
  			<div class="row">
  				<div class="col-lg-2">
- 					<div class="services">
+ 					<a href="#" class="services">
  		    <img src="img/gender.png" alt="gender">
- 						<a href="#">Лечение<br>бесплодия</a>
- 					</div><!-- /.services -->	
+ 						<p>Лечение<br>бесплодия</p>
+ 					</a><!-- /.services -->	
  				</div><!-- /.col-lg-2 -->
  				<div class="col-lg-2">
- 					<div class="services">
+ 					<a href="#" class="services">
  		    <img src="img/tubes.png" alt="tubes">
- 						<a href="#">ЭКО</a>
- 					</div><!-- /.services -->	
+ 						<p>ЭКО</p>
+ 					</a><!-- /.services -->	
  				</div><!-- /.col-lg-2 -->
  				<div class="col-lg-2">
- 					<div class="services services_move">
+ 					<a href="#" class="services services_move">
  		    <img src="img/pregnant.png" alt="pregnant">
- 						<a href="#">Сурагатное<br>материнство</a>
- 					</div><!-- /.services -->	
+ 						<p>Сурагатное<br>материнство</p>
+ 					</a><!-- /.services -->	
  				</div><!-- /.col-lg-2 -->
  				<div class="col-lg-2">
- 					<div class="services">
+ 					<a href="#" class="services">
  		    <img src="img/certificate.png" alt="certificate">
- 						<a href="#">Программы ЭКО</a>
- 					</div><!-- /.services -->	
+ 						<p>Программы ЭКО</p>
+ 					</a><!-- /.services -->	
  				</div><!-- /.col-lg-2 -->
  				<div class="col-lg-2">
- 					<div class="services">
+ 					<a href="#" class="services">
  		    <img src="img/dna.png" alt="dna">
- 						<a href="#">Эко по ОМС</a>
- 					</div><!-- /.services -->	
+ 						<p>Эко по ОМС</p>
+ 					</a><!-- /.services -->	
  				</div><!-- /.col-lg-2 -->
  				<div class="col-lg-2">
- 					<div class="services">
+ 					<a href="#" class="services">
  		    <img src="img/molecules.png" alt="molecules">
- 						<a href="#">Другие услуги</a>
- 					</div><!-- /.services -->	
+ 						<p>Другие услуги</p>
+ 					</a><!-- /.services -->	
  				</div><!-- /.col-lg-2 -->
  			</div><!-- /.row -->
  		</div><!-- /.container -->
@@ -336,20 +328,43 @@
 						<p class="banner-content__text">Бесплатный прием репродуктолога<br> в клинике "Центр ЭКО" - <strong>только до 12 июля!</strong></p>
 						<p class="banner-content__tel">Запись по тел:<strong><span class="start"> +7(800)</span><span class="end"> 500-76-28</span></strong></p>
 						<small>Не упустите свой шанс стать счастливыми родителями!</small>
-					</div>
-					<!-- /.banner-content -->
+					</div><!-- /.banner-content -->
 				</div><!-- /.banner-img -->
 			</div><!-- /.col-lg-12 -->
 		</div><!-- /.row -->
 		<div class="row">
 			<div class="col-lg-6">
 				<h2 class="tv-title title">ЭКО TV</h2>
-				<div class="tv d-flex">
-					<a href="#" class="love tv-block"> 
+				<div class="tv">
+					<a href="#" class="love tv-block child"> <!-- 1й блок -->
     		<div class="love__img tv-block__img"></div>
     			<img src="img/film.png" class="tv-block__icon" alt="film">
     	</a>
-					<a href="#" class="zamershaja tv-block"> 
+					<a href="#" class="zamershaja tv-block child"><!-- 2й блок --> 
+    		<div class="zamershaja__img tv-block__img"></div>
+    			<img src="img/film.png" class="tv-block__icon" alt="film">
+    	</a>
+					<a href="#" class="love tv-block child"> <!-- 3й блок -->
+    		<div class="love__img tv-block__img"></div>
+    			<img src="img/film.png" class="tv-block__icon" alt="film">
+    	</a>
+					<a href="#" class="zamershaja tv-block child"><!-- 4й блок --> 
+    		<div class="zamershaja__img tv-block__img"></div>
+    			<img src="img/film.png" class="tv-block__icon" alt="film">
+    	</a>
+					<a href="#" class="love tv-block child"> <!-- 5й блок -->
+    		<div class="love__img tv-block__img"></div>
+    			<img src="img/film.png" class="tv-block__icon" alt="film">
+    	</a>
+					<a href="#" class="zamershaja tv-block child"> <!-- 6й блок -->
+    		<div class="zamershaja__img tv-block__img"></div>
+    			<img src="img/film.png" class="tv-block__icon" alt="film">
+    	</a>
+					<a href="#" class="love tv-block child"> <!-- 7й блок -->
+    		<div class="love__img tv-block__img"></div>
+    			<img src="img/film.png" class="tv-block__icon" alt="film">
+    	</a>
+					<a href="#" class="zamershaja tv-block child"> <!-- 8й блок -->
     		<div class="zamershaja__img tv-block__img"></div>
     			<img src="img/film.png" class="tv-block__icon" alt="film">
     	</a>
@@ -368,7 +383,6 @@
     	</a>
 				</div><!-- /.base -->
 			</div><!-- /.col-lg-6 -->
-
 		</div><!-- /.row -->
 	</div><!-- /.container -->
 </section><!-- /.banner -->
@@ -441,7 +455,6 @@
 							 <a href="#">Задать<br>вопрос</a>
 						 </button>
 					 </div><!-- /.info-footer -->
-					 
 					 	<ul class="social d-flex">
 					 		<li><a href="#"><i class="icon-vk"></i></a></li>
 					 		<li><a href="#"><i class="icon-facebook"></i></a></li>
@@ -449,7 +462,6 @@
 					 		<li><a href="#"><i class="icon-gplus"></i></a></li>
 					 		<li><a href="#"><i class="icon-twitter"></i></a></li>
 					 	</ul>
-					 
      </div><!-- /.contacts -->
 				</div><!-- /.col-lg-3 -->
 			</div><!-- /.row -->
@@ -466,24 +478,9 @@
 				</div><!-- /.col-lg-12 -->
 			</div><!-- /.row -->
 		</div><!-- /.container -->
-</footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ </footer>
 
 	<script src="js/libs.min.js"></script>
-
 	<script src="js/main.js"></script>
 </body>
 </html>
